# end-to-end-ml-project

./: .gitignore  README.md  app.py  main.py  mlflow.db  pyproject.toml  requirements.txt
data_schema/: schema.yaml
machinelearning/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
machinelearning/constants/training_pipeline/: __init__.py
machinelearning/entity/: artifact_entity.py  config_entity.py
machinelearning/exception/: exception.py
machinelearning/pipeline/: training_pipeline.py
machinelearning/utils/main_utils/: utils.py
